hphp/test/slow/reified_generics/static-method-using-parent.php.expectf
Fatal error: You may not use object creation for potentially reified self or parent from a static method in %s on line 7
